--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Source Sans Pro', sans-serif;
+    overflow: hidden;
 }
 
 /* General STOP */
@@ -26,7 +27,7 @@ body {
     display: block;
     text-decoration: none;
     color: #fff;
-    letter-spacing: 0.3em;
+    letter-spacing: .3em;
   }
 
 .nav-item:hover {
@@ -36,13 +37,14 @@ body {
 
 /* Header STOP */
 
-/* Section */
+/* Article */
 
-.section-content {
+.article-content {
     position: relative;
 	justify-content: center;
     text-align: center;
-    height: 64vh;
+    height: 460px;
+    
 }
 
 h1.title {
@@ -53,22 +55,22 @@ h1.title {
     margin-bottom: 46px;
 }
 
-.section-content a.btn {
+a.btn {
     text-decoration: none;
     color: #fff;
-    letter-spacing: 0.3em;
+    letter-spacing: .3em;
     padding: 15px 35px;
     border-radius: 50px;
-    transition: 0.5s;
+    transition: .5s;
     background-size: 200% auto;
     background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
 }
 
-.section-content a.btn:hover {
+a.btn:hover {
     background-position: right center;
 }
 
-/* Section STOP */
+/* Article STOP */
 
 /* Footer */
 
@@ -96,3 +98,57 @@ h1.title {
 }
 
 /* Footer STOP*/
+
+
+/* Modal section (POP UP) */ 
+
+.modal-section {
+    display: none;
+}
+
+.bg-modal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: .2em;
+}
+
+
+.modal-content {
+    width: 350px;
+    height: 300px;
+    background-color: #fff;
+    border-radius: 2px;
+    text-align: center;
+    padding: 30px;
+}
+
+.modal-content h2 {
+    font-size: 16px;
+    margin: 20px;
+}
+
+input {
+    width: 80%;
+    margin: 20px auto;
+    padding: 8px 0px;
+    text-align: center;
+    color: #4c4c4c;
+    border: none;
+    border-bottom: 1px solid #000;
+    letter-spacing: .1em;
+}
+
+a.btn-modal {
+    padding: 15px 100px;
+    position: relative;
+    bottom: -35px;
+    font-weight: bold;
+}
+
+/* Modal section (POP UP) STOP */
