--- a/style.css
+++ b/style.css
@@ -111,15 +111,17 @@ a.btn:hover {
 }
 
 .bg-modal {
-  width: 100%;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   letter-spacing: 0.2em;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1001;
 }
 
 .modal-content {
@@ -181,6 +183,7 @@ a.btn-modal {
 }
 
 @media (max-width: 768px) {
+ 
   .toggle {
     display: block;
     cursor: pointer;
