--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ h1.title {
   position: absolute;
   width: 100%;
   bottom: 0;
+  margin: 0;
 }
 
 .main-footer-container {
@@ -98,7 +99,6 @@ h1.title {
   background-color: rgba(0, 0, 0, 0.5);
   margin-bottom: 0px;
   position: sticky;
-  bottom: 0;
 }
 
 .footer-item {
@@ -211,9 +211,6 @@ input:focus {
     flex-direction: column;
   }
 
-  body {
-    overflow: scroll;
-  }
 
   .toggle-active {
     display: flex;
